syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message MessageValue {
    int32 count = 1;
}

message MessageInitialData {
    int32 first_value = 1;
    int32 last_value = 2;
}

service CountingService {
    rpc getValueFromServer(MessageInitialData) returns (stream MessageValue);
}